[package]
name = "b16m"
version = "0.1.0"
authors = ["Romain Baugue <romain.baugue@elwinar.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8.13"
reqwest = { version = "0.10.8", features = ["blocking", "stream"] }
